use react router dom

--- a/정리할-내용.md
+++ b/정리할-내용.md
@@ -4,7 +4,7 @@ Terminal > Integrated > Default Profile: Windows
 
 ## airbnb eslint
 
-https://suzzeong.tistory.com/117
+https://www.npmjs.com/package/eslint-config-airbnb
 
 ## prettier
 
@@ -13,3 +13,11 @@ https://velog.io/@yjw0517/TIL2023.06.27-prettier-%EC%A0%81%EC%9A%A9-%EC%95%88%EB
 ## simple import sort
 
 https://github.com/lydell/eslint-plugin-simple-import-sort
+
+## react router
+
+https://reactrouter.com/home
+
+## 함수를 바로 호출하는 것과 익명함수로 한번 더 감싸는 것의 차이
+
+todo: ??????
