--- a/정리할-내용.md
+++ b/정리할-내용.md
@@ -1,25 +1,18 @@
-## VSCode default terminal
-
-Terminal > Integrated > Default Profile: Windows
-
-## airbnb eslint
-
-https://www.npmjs.com/package/eslint-config-airbnb
-
-## prettier
-
-https://velog.io/@yjw0517/TIL2023.06.27-prettier-%EC%A0%81%EC%9A%A9-%EC%95%88%EB%90%98%EB%8A%94-%ED%98%84%EC%83%81
-
-## simple import sort
-
-https://github.com/lydell/eslint-plugin-simple-import-sort
-
 ## react router
 
-https://reactrouter.com/home
+https://reactrouter.com/home => 새롭게 browser router 사용 방법이 변경됨
+태그 -> 오브젝트 형식 => 더 길고 구체적인 경우에 적합함
 
 ## 함수를 바로 호출하는 것과 익명함수로 한번 더 감싸는 것의 차이
 
-todo: ??????
+함수 파라미터가 일치해야함
 
-## styled component
+## styled component & module.css
+
+css 선택자 이름이 겹치지 않게 고유 값을 할당하여 충돌을 방지하는 매커니즘
+
+## recoil 지원 중단 => react19부터 호환성 이슈 => useContext
+
+## React.StrictMode
+
+console.log 두 번 찍힘 => 개발 모드 -> 실운영에선 안됨
